...
  "moduleCentralassociationDescription": "Aggregator of association links",
  "adminAccountTypes": "Account types",
  "adminAdd": "Add",
  "adminAddAssociation": "Add association",
  "adminAddedGroup": "Group created",
...
  "adminDeletingError": "Error while deleting",
  "adminDescription": "Description",
  "adminEdit": "Edit",
  "adminEditAssociation": "Edit association : {associationName}",
  "@adminEditAssociation": {
...
  "adminEmptyFieldError": "Name cannot be empty",
  "adminEmptyUser": "Empty user",
  "adminEndDate": "End date",
  "adminEndDateMaximal": "Maximum end date",
  "adminEndDateMinimal": "Minimum end date",
...
  "adminMinimum": "Minimum",
  "adminModifyPermissions": "Modify permissions",
  "adminName": "Name",
  "adminNoGroup": "No group",
  "adminNoManager": "No manager selected",
...
  "adminSiret": "SIRET",
  "adminSiretError": "SIRET must be 14 digits",
  "adminStartDate": "Start date",
  "adminStartDateMaximal": "Maximum start date",
  "adminStartDateMinimal": "Minimum start date",
...
  "advertEditingError": "Error while editing",
  "advertGroupAdvert": "Group",
  "advertIncorrectOrMissingFields": "Incorrect or missing fields",
  "advertInvalidNumber": "Please enter a number",
  "advertManagement": "Management",
...
  "amapAddingProduct": "Add a product",
  "amapAddOrder": "Add an order",
  "amapAddProduct": "Add product",
  "amapAddUser": "Add user",
  "amapAdmin": "Admin",
...
  "amapArchiveDelivery": "Archive",
  "amapArchivingDelivery": "Archiving delivery",
  "amapCategory": "Category",
  "amapCloseDelivery": "Lock",
  "amapCommandDate": "Order date",
  "amapCommandName": "Order name",
  "amapCommandProducts": "Order products",
  "amapConfirm": "Confirm",
  "amapContact": "Association contacts",
  "amapCreateCategory": "Create category",
  "amapDelete": "Delete",
  "amapDeletedDelivery": "Delivery deleted",
...
  "amapDeleteDeliveryDescription": "Are you sure you want to delete this delivery?",
  "amapDeletedOrder": "Order deleted",
  "amapDeletedProduct": "Product deleted",
  "amapDeleteProduct": "Delete product?",
  "amapDeleteProductDescription": "Are you sure you want to delete this product?",
  "amapDeleting": "Deleting",
  "amapDeletingDelivery": "Delete delivery?",
...
  "amapNoOpennedDelivery": "No open delivery",
  "amapNoOrder": "No order",
  "amapNoProduct": "No product",
  "amapNoSelectedDelivery": "No delivery selected",
  "amapNotEnoughMoney": "Not enough money",
...
  "amapPresentation1": "The AMAP (association for the preservation of small-scale farming) is a service offered by the Planet&Co association of ECL. You can receive products (fruit and vegetable baskets, juices, jams...) directly on campus!\n\nOrders must be placed before Friday at 9 PM and are delivered on campus on Tuesday from 1:00 PM to 1:45 PM (or from 6:15 PM to 6:30 PM if you can't come at 
  "amapPresentation2": "\n\nFeel free to contact us if you have any issues!",
  "amapPrice": "Price",
  "amapProduct": "product",
  "amapProductInDelivery": "Product in an unfinished delivery",
...
  "amapWaiting": "Pending",
  "bookingAdd": "Add",
  "bookingAddBooking": "Add booking",
  "bookingAddBookingPage": "Request",
  "bookingAddedBooking": "Request added",
  "bookingAddedManager": "Manager added",
  "bookingAddedRoom": "Room added",
...
  "bookingAddRoom": "Add room",
  "bookingAdminPage": "Admin",
  "bookingAllDay": "All day",
  "bookingBookedFor": "Booked for",
  "bookingBooking": "Booking",
...
  "bookingDeletingRoom": "Delete the room?",
  "bookingEdit": "Edit",
  "bookingEditBooking": "Edit a booking",
  "bookingEditedBooking": "Booking edited",
  "bookingEditedManager": "Manager edited",
...
  "bookingEndDate": "End date",
  "bookingEndHour": "End hour",
  "bookingEntity": "For whom?",
  "bookingError": "Error",
  "bookingEventEvery": "Every",
  "bookingHistoryPage": "History",
  "bookingIncorrectOrMissingFields": "Incorrect or missing fields",
  "bookingInterval": "Interval",
  "bookingInvalidDates": "Invalid dates",
  "bookingInvalidIntervalError": "Invalid interval",
  "bookingInvalidRoom": "Invalid room",
  "bookingKeysRequested": "Keys requested",
  "bookingManagement": "Management",
...
  "bookingMultipleDay": "Multiple days",
  "bookingMyBookings": "My bookings",
  "bookingNecessaryKey": "Key needed",
  "bookingNext": "Next",
  "bookingNo": "No",
...
  "bookingNoCurrentBooking": "No current booking",
  "bookingNoDateError": "Please choose a date",
  "bookingNoDaySelected": "No day selected",
  "bookingNoDescriptionError": "Please enter a description",
  "bookingNoKeys": "No keys",
...
  "bookingPending": "Pending",
  "bookingPrevious": "Previous",
  "bookingReason": "Reason",
  "bookingRecurrence": "Recurrence",
  "bookingRecurrenceDays": "Recurrence days",
  "bookingRecurrenceEndDate": "Recurrence end date",
  "bookingRecurrent": "Recurrent",
  "bookingRegisteredRooms": "Registered rooms",
...
  "bookingStartHour": "Start hour",
  "bookingWeekDayFri": "Friday",
  "bookingWeekDayMon": "Monday",
  "bookingWeekDaySat": "Saturday",
  "bookingWeekDaySun": "Sunday",
...
  "bookingWeekDayTue": "Tuesday",
  "bookingWeekDayWed": "Wednesday",
  "bookingWeeks": "Weeks",
  "bookingYes": "Yes",
  "cinemaAdd": "Add",
...
  "settingsValidate": "Confirm",
  "settingsVersion": "Version",
  "toolDateRequired": "Date required",
  "toolInvalidNumber": "Invalid number",
  "toolSuccess": "Success",
...
